# epitome

./: .env.example  .gitignore  .prettierrc.js  .railwayignore  .vercelignore  Dockerfile  FRONTEND.md  FRONTEND_INTEGRATION.md  PREVIEW_DEPLOYMENTS.md  RAILWAY_QUICK_START.md  RAILWAY_SETUP.md  RAILWAY_SUBMODULE_FIX.md  README.md  VERCEL_SETUP.md  claude.md  debug_extraction.py  fix_submodule.sh  main.py  nixpacks.toml  package-lock.json  pyproject.toml  railway.json  railway_build_fix.md  railway_fix.md  requirements.txt  run.py  setup_railway.sh  setup_supabase.sh  start.sh  sync_frontend.sh  tailwind.config.js  test_api_extraction.py  test_backend.py  test_fosi_extraction.py  test_pdf_extraction.py  test_workbook_generation.py  vercel.json
agents/: __init__.py  enrichment.py  production_workbook_generator.py  prompts.py
api/: __init__.py  database.py  index.py  main.py  progress.py
api/services/: __init__.py  chat_service.py  project_service.py
frontend_source/: CLAUDE.md  package-lock.json  package.json  qa-screenshot-script-final.mjs  qa-screenshot-script-simple.mjs  qa-screenshot-script.js  qa-screenshot-script.mjs  tailwind.config.ts  vercel-build.sh
frontend_source/src/: App.tsx  index.css
prisma/: schema.prisma
prisma/migrations/: enable_rls.sql  enable_rls_basic.sql
static/: index.html
static/assets/: index-BI56sAjw.js  index-BR9WpgWw.js  index-BSrMnVJ7.css  index-BdLMtbRF.js  index-BwU84ufl.css  index-C7iGfxn1.css  index-C8RyzXC3.js  index-CDsDpHB0.js  index-CR1X78Eq.css  index-CYvIA75E.js  index-Cey8k-LS.js  index-CpkA7Rzc.js  index-CtIr5Boh.js  (+20 more)
(+41 files in other folders)
