[project]
name = "epitome"
version = "0.1.0"
description = "Automated production workbook generator for film/TV/advertising"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "xlsxwriter>=3.1.9",
    "pandas>=2.0.0",
    "python-dateutil>=2.8.2",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "PyPDF2>=3.0.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/venv/*", "*/node_modules/*"]

[tool.isort.sections]
default_section = "THIRDPARTY"
known_first_party = ["agents", "api"]

